--- a/GummiBearKingdom/Views/Home/Index.cshtml
+++ b/GummiBearKingdom/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Home";
+    ViewData["Title"] = "Gummi Bear Kingdom : Home";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Gummi Bear Kingdom</h1>
-<p>@Html.ActionLink("Products", "Index", "Product")</p>>
+<p>@Html.ActionLink("Products", "Index", "Products")</p>
