--- a/GummiBearKingdom/Views/Shared/_Layout.cshtml
+++ b/GummiBearKingdom/Views/Shared/_Layout.cshtml
@@ -1,1 +1,11 @@
-﻿
+﻿<html>
+    <head>
+        <title></title>
+        <link rel="stylesheet" href="/css/master.css">
+    </head>
+    <body>
+        <div class="container">
+            @RenderBody()
+        </div>
+    </body>
+</html>
