* ProductsController.cs: add details route
* Startup.cs: comment out run method

* Details.cshtml: add details view

* Index.cshtml: change url action to properly link details

--- a/GummiBearKingdom/Views/Products/Index.cshtml
+++ b/GummiBearKingdom/Views/Products/Index.cshtml
@@ -21,7 +21,7 @@
     {
         <tr>
             <td>
-                <a href='@Url.Action("Index")'>=@Html.DisplayFor(modelItem => listProduct.Name)</a>
+                <a href='@Url.Action("Details", new { id = listProduct.ProductId})'>@Html.DisplayFor(modelItem => listProduct.Name)</a>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => listProduct.Cost)
