* Delete.cshtml: add delete view
* Index.cshtml: add link to return to home index

--- a/GummiBearKingdom/Views/Products/Delete.cshtml
+++ b/GummiBearKingdom/Views/Products/Delete.cshtml
@@ -13,4 +13,4 @@
     <input type="submit" value="Delete"/> 
 }
 
-<p>@Html.ActionLink("Back to List", "Index")</p>
+<p>@Html.ActionLink("Back to Product", "Index")</p>
