* Index.cshtml: move links to header and add copy
* _Layout.cshtml: fix partial render

* Header.cshtml: create header partial

* master.css: add header styling

--- a/GummiBearKingdom/Views/Shared/_Layout.cshtml
+++ b/GummiBearKingdom/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="/css/master.css">
     </head>
     <body>
+        @Html.Partial("Header")
         <div class="container">
             @RenderBody()
         </div>
