--- a/GummiBearKingdom/wwwroot/css/master.css
+++ b/GummiBearKingdom/wwwroot/css/master.css
@@ -1,3 +1,39 @@
-﻿body {
+﻿*{
+    padding: 0;
+    margin: 0;
+}
+
+html, body {
+    height: 100%;
+    overflow: hidden;
+}
+
+body {
     background-color: orangered;
+}
+
+.header {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    background-color: limegreen;
+    height: 200px;
+    top: 0;
+    margin-bottom: 10px;
+    left: 0;
+    display: flex;
+    align-content: center;
+
+}
+
+.header p{
+    align-self: flex-start;
+}
+
+.header a{
+    color: navajowhite;
+    text-decoration: none;
+}
+
+.header a:hover{
+    color: white;
 }
