--- a/GummiBearKingdom/wwwroot/css/master.css
+++ b/GummiBearKingdom/wwwroot/css/master.css
@@ -4,7 +4,7 @@
 }
 
 html, body {
-    height: 100%;
+    /*height: 100%;*/
     overflow: hidden;
 }
 
@@ -16,12 +16,13 @@ body {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 20px;
     background-color: limegreen;
-    height: 200px;
+    height: 150px;
     top: 0;
     margin-bottom: 10px;
     left: 0;
     display: flex;
-    align-content: center;
+    justify-content: space-between;
+    padding: 10px;
 
 }
 
