--- a/GummiBearKingdom/wwwroot/css/master.css
+++ b/GummiBearKingdom/wwwroot/css/master.css
@@ -42,6 +42,7 @@ h2, h3, h4 {
 
 .header p{
     align-self: flex-start;
+    font-size: a
 }
 
 .header a{
@@ -53,8 +54,21 @@ h2, h3, h4 {
     color: white;
 }
 
-.container {
-    font-family;    background-color: rgba(255,255,255, 0.8);
+.container {    background-color: rgba(255,255,255, 0.8);
     padding: 10px;
     margin: 5%;
+}
+
+label {
+    font-size: 18px;
+}
+
+input[type=text] {
+    font-size: 20px;
+}
+
+textarea {
+    font-size: 18px;
+    height: 200px;
+    width: 400px;
 }
