add image input to product form

--- a/GummiBearKingdom/Views/Products/Create.cshtml
+++ b/GummiBearKingdom/Views/Products/Create.cshtml
@@ -7,7 +7,7 @@
 <h2>Add a product to the Gummi Bear Kingdom</h2>
 <hr/>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm(null, null, FormMethod.Post, new { enctype="multipart/form-data"}))
 {
     <p>
         @Html.LabelFor(model => model.Name)
@@ -27,6 +27,14 @@
     <p>
         @Html.EditorFor(model => model.Cost)
     </p>
+
+    <p>
+        @Html.LabelFor(model => model.Image)
+    </p>
+    <p>
+        <input type="file" id="Image" name="Image"/>
+    </p>
+
 
     <input type="submit" value="Submit Product"/>
 }
