fix css to scroll but prevent over scrolling on

--- a/GummiBearKingdom/wwwroot/css/master.css
+++ b/GummiBearKingdom/wwwroot/css/master.css
@@ -5,9 +5,14 @@
     margin: 0;
 }
 
-html, body {
-    /*height: 100%;*/
+html {
+    height: 100%;
     overflow: hidden;
+}
+
+body {
+    height: 100%;
+    overflow: auto;
 }
 
 body {
