* Create.cshtml: change to textboxfor
* Details.cshtml: italicize no image display message

* Index.cshtml: experiment product listing style

--- a/GummiBearKingdom/Views/Products/Create.cshtml
+++ b/GummiBearKingdom/Views/Products/Create.cshtml
@@ -19,13 +19,13 @@
         @Html.LabelFor(model => model.Description)
     </p>
     <p>
-        @Html.EditorFor(model => model.Description)
+        @Html.TextBoxFor(model => model.Description)
     </p>
     <p>
         @Html.LabelFor(model => model.Cost)
     </p>
     <p>
-        @Html.EditorFor(model => model.Cost)
+        @Html.TextBoxFor(model => model.Cost, new { type = "number"})
     </p>
 
     <p>
