--- a/GummiBearKingdom/wwwroot/css/master.css
+++ b/GummiBearKingdom/wwwroot/css/master.css
@@ -16,11 +16,11 @@ body {
 }
 
 body {
-    background:
-        linear-gradient(yellow 0%, pink 90%),
+    background: 
+        linear-gradient(purple 0%, red 90%), 
         url('/img/gbk_bg.jpg');
-    background-blend-mode: overlay;
-    font-family: 'Pavanam', sans-serif;
+    background-blend-mode: screen;
+    font-family: 'Pavanam', sans-serif
 }
 
 h1 {
@@ -34,33 +34,32 @@ h2, h3, h4 {
 .header {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 20px;
-    background-color: salmon;
-    height: 150px;
+    background-color: #ffeb3b;
+    height: 100px;
     top: 0;
     margin-bottom: 10px;
     left: 0;
     display: flex;
     justify-content: space-between;
-    padding: 10px;
-
+    padding: 10px
 }
 
 .header p{
     align-self: flex-start;
-    font-size: a
+    font-size: 30px;
 }
 
-.header a{
-    color: navajowhite;
-    text-decoration: none;
-}
+.header a {
+    color: #9c27b0;
+    text-decoration: none
+    }
 
 .header a:hover{
     color: white;
 }
 
-.container {    background-color: rgba(255,255,255, 0.8);
-    padding: 10px;
+.container {    background-color: rgba(255,255,255, 0.9);
+    padding: 20px;
     margin: 5%;
 }
 
@@ -90,7 +89,7 @@ textarea {
 .container a {
     text-decoration: none;
     font-weight: bolder;
-    color: lightcoral;
+    color: firebrick;
 }
 
 .container a:hover  {
@@ -102,8 +101,34 @@ textarea {
     display: flex;
     flex-wrap: wrap;
     font-size: 30px;
+    align-content: space-between;
 }
 
 .products p {
-    margin: 5px;
+    text-align:center;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    width: 30%;
+    /*background-color: lightgoldenrodyellow;*/
+    border-radius: 25px;
+    padding: 10px;
+}
+
+    .products p:nth-child(5n+2) a {
+        color: #e6b800;
+
+    }
+
+.products p:nth-child(5n+3) a {
+    color: limegreen;
+}
+
+.products p:nth-child(5n+4) a {
+    color: orange;
+}
+
+.products p:nth-child(5n+5) a {
+    color: red;
 }
