--- a/GummiBearKingdom/Views/Home/Index.cshtml
+++ b/GummiBearKingdom/Views/Home/Index.cshtml
@@ -1,13 +1,13 @@
-﻿@model IEnumberable<GummiBearKingdom.Models.Product>
+﻿@model IEnumerable<GummiBearKingdom.Models.Product> 
 @{
     ViewData["Title"] = "Gummi Bear Kingdom : Home";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@if(Model.Count != 0)
+@if(Model.Count() > 0)
 {
-    foreach(Product product in Model)
+    foreach(var product in Model)
     {
-        <div class="top-product">product.Name</div>
+        <div class="top-product">@product.Name</div>
     }
 }
 
