Change and test ReviewController to use ViewModel in Create().

--- a/GummiBearKingdom/Views/Products/Details.cshtml
+++ b/GummiBearKingdom/Views/Products/Details.cshtml
@@ -48,12 +48,17 @@ else
             <p>
                 @Html.TextBoxFor(model => m.Review.Author)
             </p>
-
             <p>
-                @Html.LabelFor(model => model.Description)
+                @Html.LabelFor(m => m.Review.ContentBody):
             </p>
             <p>
-                @Html.TextBoxFor(model => model.Description)
+                @Html.TextBoxFor(model => m.Review.ContentBody)
+            </p>
+            <p>
+                @Html.LabelFor(m => m.Review.Rating):
+            </p>
+            <p>
+                @Html.TextBoxFor(model => m.Review.Rating)
             </p>
             
             <input type="submit"/> 
