Modify Details page to show average rating.

--- a/GummiBearKingdom/Views/Products/Details.cshtml
+++ b/GummiBearKingdom/Views/Products/Details.cshtml
@@ -27,7 +27,10 @@ else
 <p>@Html.DisplayFor(model => model.Product.Description)</p>
 
 <p>@Html.DisplayNameFor(model => model.Product.Cost):</p>
-<p>@Html.DisplayFor(model => model.Product.Cost)</p>
+<p>$@Html.DisplayFor(model => model.Product.Cost)</p>
+
+<p>Average Rating:</p>
+<p>@Model.Product.GetRating()</p> 
  
 <p>
     @Html.ActionLink("Reviews", "GetAll", "Reviews", new { id = Model.Product.ProductId}) |  
