--- a/GummiBearKingdom/wwwroot/css/master.css
+++ b/GummiBearKingdom/wwwroot/css/master.css
@@ -139,3 +139,27 @@ textarea {
 .products p:nth-child(5n+5) a {
     color: red;
 }
+
+.stars-outer {
+    display: inline-block; 
+     position: relative; 
+    font-family: FontAwesome
+}
+
+    .stars-outer::before {
+        content: "\f006 \f006 \f006 \f006 \f006"
+    }
+
+.stars-inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    width: 0
+}
+
+    .stars-inner::before {
+        content: "\f005 \f005 \f005 \f005 \f005";
+        color: #f8ce0b
+    }
