--- a/GummiBearKingdom/Views/Shared/_Layout.cshtml
+++ b/GummiBearKingdom/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
     <head>
         <title></title>
         <script src="https://use.fontawesome.com/2f75641b99.js"></script>
+        <script src="/js/scripts.js"></script>
         <link rel="stylesheet" href="/css/master.css">
     </head>
     <body>
