--- a/GummiBearKingdom/wwwroot/css/master.css
+++ b/GummiBearKingdom/wwwroot/css/master.css
@@ -139,15 +139,15 @@ textarea {
 .products p:nth-child(5n+5) a {
     color: red;
 }
-
-.modal-review {
+ 
+#modal-review {
     position: absolute;
     top: 0;
     left: 0;
     height: 100vh;
     width: 100vw;
     background-color:rgba(0,0,0,0.75);
-    display: flex;
+    display: none;
     justify-content: space-around;
     align-items: center;
     }
@@ -175,7 +175,7 @@ textarea {
 
 .form textarea {
     width: 100%;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
 }
 
 .exit-button {
@@ -189,3 +189,4 @@ textarea {
 .exit-button:hover {
     background-color: red;
 }
+ 
