Fix home index to link to top three product details.

--- a/GummiBearKingdom/wwwroot/css/master.css
+++ b/GummiBearKingdom/wwwroot/css/master.css
@@ -189,4 +189,8 @@ textarea {
 .exit-button:hover {
     background-color: red;
 }
- 
+
+.home-products {
+    display: flex;
+    justify-content: space-around;
+}
